Update code to Java 11 (#706 / #707)
This commit updates the code base to use the language features now
available to us (as we baseline against Java 11).

related to: #706
PR: #707